# byte-shifter

./: Cargo.toml  LICENSE  README.md
benches/: byte_shifter_bench.rs
src/: lib.rs
